<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="?attr/colorAccent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_profile_image"
        android:layout_width="@dimen/default_image_size"
        android:layout_height="@dimen/default_image_size"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user"/>

    <TextView
        android:id="@+id/nav_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/nav_profile_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/nav_header_subtitle" />

</LinearLayout>
